--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tweet Sentiment to CSV</title>
+	<title>Tweeter Sentiment to CSV</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
 <body>
 	<div class='container-fluid'>
 		<div class='text-center'>
-			<h1>Tweet Sentiment to CSV</h1>
+			<h1>Tweeter Sentiment to CSV</h1>
 			<h5>Search for Tweets and download the data labeled with it's Polarity in CSV format</h5>
 			
 			<div id="search_box" class="container-fluid">
@@ -26,7 +26,7 @@
 		</div>
 		<div id="tweets"></div>
 		<footer class="text-center">
-			Made with ❤ | <a href="https://github.com/rhnvrm/labeled-tweet-generator">Github</a> | <a href="http://rohanverma.net">Rohan Verma</a>
+			Made with ❤ | <a href="https://github.com/girishgodage/tweet_generator.git">Github</a> | <a href="https://www.linkedin.com/in/girish-godage-0a80422/">Girish Godage</a>
 		</footer>	</div>
 	<script type="text/javascript">
 
